force-app/main/default/objects/copado__User_Story__c/fields/X7S_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>X7S_Actual_Hours__c</fullName>
    <inlineHelpText>Actual hours spent on development</inlineHelpText>
    <label>7S Actual Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>