force-app/main/default/objects/copado__User_Story__c/fields/X7S_LOE_at_Tollgate__c.field-meta.xml
<CustomField>
    <fullName>X7S_LOE_at_Tollgate__c</fullName>
    <inlineHelpText>LOE confirmed at tollgate</inlineHelpText>
    <label>7S LOE at Tollgate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>