force-app/main/default/objects/copado__User_Story__c/fields/X7SAcceptanceCriteria__c.field-meta.xml
<CustomField>
    <fullName>X7SAcceptanceCriteria__c</fullName>
    <label>7S Acceptance Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>