force-app/main/default/objects/copado__User_Story__c/recordTypes/Sub_Task.recordType-meta.xml
<RecordType>
    <fullName>Sub_Task</fullName>
    <active>true</active>
    <description>Story Sub-tasks</description>
    <label>Sub-Task</label>
</RecordType>