force-app/main/default/objects/copado__User_Story__c/listViews/X7S_Internal_Stories.listView-meta.xml
<ListView>
    <fullName>X7S_Internal_Stories</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Status__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>copado__Promote_Change__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Project__c</field>
        <operation>equals</operation>
        <value>7S Internal Projects</value>
    </filters>
    <filters>
        <field>copado__Status__c</field>
        <operation>equals</operation>
        <value>Draft,Backlog,Backburner,Awaiting Approval,Approved,In Progress</value>
    </filters>
    <label>7S Internal Backlog and in Progress</label>
    <language>en_US</language>
</ListView>