force-app/main/default/objects/copado__User_Story__c/listViews/X7S_Internal_Stories_Completed.listView-meta.xml
<ListView>
    <fullName>X7S_Internal_Stories_Completed</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__Status__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>copado__Promote_Change__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Project__c</field>
        <operation>equals</operation>
        <value>7S Internal Projects</value>
    </filters>
    <filters>
        <field>copado__Status__c</field>
        <operation>equals</operation>
        <value>Completed,Done</value>
    </filters>
    <filters>
        <field>copado__Environment__c</field>
        <operation>equals</operation>
        <value>7SProduction</value>
    </filters>
    <label>7S Internal Stories - Completed</label>
    <language>en_US</language>
</ListView>